--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
     "babel-register": "^6.7.2",
     "eslint": "^2.6.0",
     "expect": "^1.16.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "nuclear-js": "^1.3.0"
+  },
+  "dependencies": {
+    "immutable": "^3.7.6",
+    "lodash.assign": "^4.0.7",
+    "nuclear-module": "^0.5.0",
+    "nuclear-record": "^0.1.0"
   }
 }
